@@ -57,7 +57,7 @@ process {
     memory = { checkMax( 16.GB * task.attempt * task.attempt, 'memory' ) }
   }
   withLabel: highMem {
-   memory = { checkMax( 32.GB * task.attempt, 'memory' ) }
+   memory = { checkMax( 48.GB * task.attempt, 'memory' ) }
   }
   withLabel: extraMem {
     memory = { checkMax( 80.GB * task.attempt, 'memory' ) }
